# energy-efficiency-of-memory-bound-algorithms

./: .gitignore  CMakeLists.txt  README.md  utility.hpp
clustering/: CMakeLists.txt  clustering.hpp  dbscan.cpp  dbscan_opt.cpp  kmeans.cpp  kmeans_opt.cpp
clustering/benchmark/: CMakeLists.txt  dbscan-opt128.cpp  dbscan-opt16.cpp  dbscan128.cpp  dbscan16.cpp  generatePoints128.cpp  generatePoints16.cpp  generatebigPoints128.cpp  generatebigPoints16.cpp  kmeans-opt128.cpp  kmeans-opt16.cpp  kmeans128.cpp  kmeans16.cpp
scripts/: bench_generation.sh  bench_generation_1632.sh  bench_with_complete_stats_arnor.sh  bench_with_complete_stats_isengard.sh  bench_with_runtime.sh  clean.sh  install_arnor.sh  install_isengard.sh  perf_arnor.sh  perf_arnor_analyse.sh  perf_isengard.sh  perf_isengard_analyse.sh  run_cluster.sh  run_single_arnor.sh  run_single_isengard.sh  run_single_isengard_8-32.sh  run_single_isengard_gb.sh  run_sort_arnor.sh  run_sort_bench_full.sh  run_sort_bench_small.sh  run_sort_bench_upper.sh  run_sort_isengard.sh
sort/: CMakeLists.txt  correctness_check.cpp  mergesort.cpp  non_comparison.cpp  optimalSort.cpp  quicksort.cpp  timsort.cpp
sort/benchmarks/: CMakeLists.txt  benchmark_generate_N.cpp  benchmark_generate_N_time.cpp  benchmark_sort_N.cpp  bs.cpp  cs.cpp  ms_bo_i.cpp  ms_bo_r.cpp  ms_co.cpp  ms_ip.cpp  ms_ip_si.cpp  ms_opt.cpp  ms_p2.cpp  ms_p20.cpp  ms_par.cpp  ms_pc.cpp  ms_td.cpp  ms_wa.cpp  pf_bs.cpp  pf_cs.cpp  pf_ms_bo_i.cpp  pf_ms_bo_r.cpp  pf_ms_co.cpp  pf_ms_ip.cpp  pf_ms_ip_si.cpp  pf_ms_opt.cpp  pf_ms_p2.cpp  pf_ms_p20.cpp  pf_ms_pc.cpp  pf_ms_td.cpp  pf_ms_wa.cpp  pf_qs.cpp  pf_qs_3_bmi.cpp  pf_qs_3_d.cpp  pf_qs_co.cpp  pf_qs_coi.cpp  pf_qs_m3.cpp  pf_qs_opt.cpp  pf_qs_pc.cpp  pf_qs_rp.cpp  (+21 more)
