cmake_minimum_required(VERSION 3.3.2)

add_executable(gen128KB generatePoints128.cpp)
add_executable(gen16MB generatePoints16.cpp)
add_executable(gen128KB_big generatebigPoints128.cpp)
add_executable(gen16MB_big generatebigPoints16.cpp)
add_executable(dbscan16 dbscan16.cpp)
add_executable(dbscan128 dbscan128.cpp)
add_executable(dbscan16o dbscan-opt16.cpp)
add_executable(dbscan128o dbscan-opt128.cpp)
add_executable(kmeans16 kmeans16.cpp)
add_executable(kmeans128 kmeans128.cpp)
add_executable(kmeans16o kmeans-opt16.cpp)
add_executable(kmeans128o kmeans-opt128.cpp)