cmake_minimum_required(VERSION 3.3.2)

add_executable(generateN benchmark_generate_N.cpp)
add_executable(generateN_time benchmark_generate_N_time.cpp)

add_executable(qs qs.cpp)
add_executable(qs_3_bmi qs_3_bmi.cpp)
add_executable(qs_3_d qs_3_d.cpp)
add_executable(qs_co qs_co.cpp)
add_executable(qs_coi qs_coi.cpp)
add_executable(qs_m3 qs_m3.cpp)
add_executable(qs_pc qs_pc.cpp)
add_executable(qs_rp qs_rp.cpp)
add_executable(qs_shuffle qs_shuffle.cpp)
add_executable(qs_tce qs_tce.cpp)
add_executable(qs_opt qs_opt.cpp)
add_executable(tim tim.cpp)
add_executable(cs cs.cpp)
add_executable(bs bs.cpp)
add_executable(radix radix.cpp)
add_executable(radixX radixX.cpp)
add_executable(ms_opt ms_opt.cpp)
add_executable(ms_td ms_td.cpp)
add_executable(ms_co ms_co.cpp)
add_executable(ms_pc ms_pc.cpp)
add_executable(ms_ip ms_ip.cpp)
add_executable(ms_ip_si ms_ip_si.cpp)
add_executable(ms_wa ms_wa.cpp)
add_executable(ms_bo_i ms_bo_i.cpp)
add_executable(ms_bo_r ms_bo_r.cpp)
add_executable(ms_par ms_par.cpp)
add_executable(ms_p2 ms_p2.cpp)
add_executable(ms_p20 ms_p20.cpp)

add_executable(pf_qs pf_qs.cpp)
add_executable(pf_qs_3_bmi pf_qs_3_bmi.cpp)
add_executable(pf_qs_3_d pf_qs_3_d.cpp)
add_executable(pf_qs_co pf_qs_co.cpp)
add_executable(pf_qs_coi pf_qs_coi.cpp)
add_executable(pf_qs_m3 pf_qs_m3.cpp)
add_executable(pf_qs_pc pf_qs_pc.cpp)
add_executable(pf_qs_rp pf_qs_rp.cpp)
add_executable(pf_qs_shuffle pf_qs_shuffle.cpp)
add_executable(pf_qs_tce pf_qs_tce.cpp)
add_executable(pf_qs_opt pf_qs_opt.cpp)
add_executable(pf_tim pf_tim.cpp)
add_executable(pf_cs pf_cs.cpp)
add_executable(pf_bs pf_bs.cpp)
add_executable(pf_radix pf_radix.cpp)
add_executable(pf_radixX pf_radixX.cpp)
add_executable(pf_ms_opt pf_ms_opt.cpp)
add_executable(pf_ms_td pf_ms_td.cpp)
add_executable(pf_ms_co pf_ms_co.cpp)
add_executable(pf_ms_pc pf_ms_pc.cpp)
add_executable(pf_ms_ip pf_ms_ip.cpp)
add_executable(pf_ms_ip_si pf_ms_ip_si.cpp)
add_executable(pf_ms_wa pf_ms_wa.cpp)
add_executable(pf_ms_bo_i pf_ms_bo_i.cpp)
add_executable(pf_ms_bo_r pf_ms_bo_r.cpp)
add_executable(pf_ms_p2 pf_ms_p2.cpp)
add_executable(pf_ms_p20 pf_ms_p20.cpp)